Updated demo link and include demo link into readme.md

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://rawcdn.githack.com/PatrissolJuns/juns-form-validator/cc44d99a9ed132b9125b2052a7a6c37ea7fe989a/jfv.min.css">
+  <link rel="stylesheet" href="https://raw.githack.com/PatrissolJuns/juns-form-validator/master/jfv.min.css">
 
   <title>Juns Form Validator Demo</title>
 </head>
@@ -136,7 +136,7 @@
   </div> <!-- /form -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://rawcdn.githack.com/PatrissolJuns/juns-form-validator/cc44d99a9ed132b9125b2052a7a6c37ea7fe989a/jfv.min.js"></script>
+  <script src="https://raw.githack.com/PatrissolJuns/juns-form-validator/master/jfv.min.js"></script>
   <script>
     toggleLanguage = (from, to) => {
       if(JFV_ERROR_MESSAGE.currentLanguage !== to) {
